--- a/src/app/components/newaccommodation/newaccommodation.component.html
+++ b/src/app/components/newaccommodation/newaccommodation.component.html
@@ -13,7 +13,7 @@
   <div class="form-group ">
       <label class="col-sm-2" for="Name">Type:</label>
       <select id="type" (change)="selectChangeHandler($event)" name="type" style="font-size: 13px" class="col-sm-2">
-          <option selected>Choose...</option>
+          <option class="option0" value="0" selected hidden>Choose ...</option>
           <option value="Hotel">Hotel</option>
           <option value="Bad&breakfast">Bad&breakfast</option>
           <option value="Apartman">Apartman</option>
