--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -7,8 +7,14 @@
       </li>
   
       <li class="nav-item">
+        <a class="nav-link linkc" [routerLink]="['priceplan']" >Price plan</a>
+      </li>
+
+      <li class="nav-item">
         <a class="nav-link linkc" [routerLink]="['mineaccommodation']" >Mine accommodations</a>
       </li>
+
+      
 
     </ul>
   </nav>
