--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -14,7 +14,9 @@
         <a class="nav-link linkc" [routerLink]="['mineaccommodation']" >Mine accommodations</a>
       </li>
 
-      
+      <li class="nav-item">
+        <a class="nav-link linkc" [routerLink]="['pictures']">Pictures</a>
+      </li>
 
     </ul>
   </nav>
