--- a/src/app/components/mineaccommodation/mineaccommodation.component.html
+++ b/src/app/components/mineaccommodation/mineaccommodation.component.html
@@ -100,13 +100,13 @@
           <div class="modal-body">
               <div class="row">          
                   <label class="col-sm-4">Reserve from:</label>
-                  <input class="col-sm-6" type="text" name="reservefrom" [(ngModel)]="reserveAccommodation.reservedFrom" placeholder="yyyy-mm-dd hh:mm:ss">         
+                  <input class="col-sm-6" type="text" name="reservefrom" [(ngModel)]="reserveAccommodation.reservedFrom" placeholder="dd/mm/yyyy">         
                
               </div>
               
               <div class="row" style="margin-top: 10px;">          
                   <label class="col-sm-4">Reserve to:</label>
-                  <input class="col-sm-6" type="text" name="reserveto" [(ngModel)]="reserveAccommodation.reservedTo" placeholder="yyyy-mm-dd hh:mm:ss">         
+                  <input class="col-sm-6" type="text" name="reserveto" [(ngModel)]="reserveAccommodation.reservedTo" placeholder="dd/mm/yyyy">         
                
               </div>
             
