--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -11,11 +11,16 @@
       </li>
 
       <li class="nav-item">
-        <a class="nav-link linkc" [routerLink]="['mineaccommodation']" >Mine accommodations</a>
+        <a class="nav-link linkc" [routerLink]="['pictures']">Pictures</a>
       </li>
 
       <li class="nav-item">
-        <a class="nav-link linkc" [routerLink]="['pictures']">Pictures</a>
+        <a class="nav-link linkc" [routerLink]="['mineaccommodation']" >Mine accommodations</a>
+      </li>
+
+
+      <li class="nav-item">
+        <button class="buttonL" (click)="logoutFun()">Logout</button>
       </li>
 
     </ul>
