--- a/src/app/components/newaccommodation/newaccommodation.component.html
+++ b/src/app/components/newaccommodation/newaccommodation.component.html
@@ -23,6 +23,10 @@
       <textarea class="form-control col-sm-2 d-inline" [(ngModel)]="accommodation.description" name="description" style="margin-left: 70px; font-size: 11px;" rows="2"  id="comment" #desc required></textarea>
       
   </div>
+  <div class="form-group ">
+    <label class="col-sm-2" for="Name">Category:</label>
+    <input class="col-sm-2" type="text" [(ngModel)]="accommodation.category" name="name" style="font-size: 12px" placeholder="Name" #namee required>
+  </div>
   <br>
   <legend style="margin-left: 12px;">Location:</legend>
   <div class="form-group ">
@@ -51,9 +55,26 @@
      </mat-list-option>
     </mat-selection-list>
   </div>
+<br>
+  <legend style="margin-left: 12px;">Picture:</legend>
 
 
+  <br>
+  <div class="row">
+    <div class="row" >
+      <div class="col-sm-4" style="margin-left: 30px;">
+        <label for="">Picture</label>
+      </div>
+      <div class="col-sm-5" >
+        <input type="text" name="pic" [(ngModel)]="accommodation.picture" >
+      </div>
+    </div>
+    <div class="row">
+      <img src="" alt="" class="img-item"/>
+    </div>
+    
 
+  </div>
 
   <br>
   <legend style="margin-left: 12px;">Rooms:</legend>
@@ -61,7 +82,7 @@
   <br>
   <br>
     <div class="row">
-      <div class="col-sm-2"><button style="margin-left: 300px;" type="submit" (click)="addNewAccommodation(); name.value=''; desc.value=''; country.value=''; city.value=''; address.value=''" class="btn btn-primary">Submit</button></div>
+      <div class="col-sm-2"><button style="margin-left: 300px;" type="submit" (click)="addNewAccommodation(); name.value=''; namee.value=''; desc.value=''; country.value=''; city.value=''; address.value=''" class="btn btn-primary">Submit</button></div>
       <div class="col-*-*"></div>
     </div>
                   
