--- a/src/app/components/pictures/pictures.component.html
+++ b/src/app/components/pictures/pictures.component.html
@@ -1,31 +1,61 @@
 
+<div class="container-fluid ">
 
-<div class="container-fluid">
-    
-  <div class="row ">
-    <div class="col position bg-light" style="background-color:rgb(206, 206, 248);">
-        <ul *ngFor="let accommodation of accommodations">
-            <div>
-                <li>
-                  <p class="html">Hotel: {{accommodation.name}} <br>
-                  Type: {{accommodation.type}} <br>
-                  Description: {{accommodation.description}} <br>
-                 
-                  </p>
-                  <div>
-                    <input type="file" onchange="document.getElementById('blah').src = window.URL.createObjectURL(this.files[0])">
-                    <img id="blah" alt="your image" width="100" height="100" />
-                  </div>
-                </li>
+  <div class="row" style="margin-top: 20px; "></div>
+
+  <div class="row">
+
+    <div class="col-md-5 bg-light" style="margin-bottom: 50px;">
+
+      <ul class="list-group" style="padding-top: 29px; padding-left: 14px; padding-right: 14px; padding-bottom: 30px;">
+        <li class="list-group-item" *ngFor="let accommodation of accommodations" >
+          <div class="row">
+
+          
+            <div class="col-md-9">
+            {{accommodation.name}}
+          </div>
+            
+          <div class="col-md-3">
+            <button class="btn btn-outline-primary" style="margin-right: 30px;" id="{{accommodation.id}}" (click)="idOfAccommodation(accommodation.id)">Add picture</button>
+
+          </div>
+        </div>
+        </li>
         
-            </div>
-        
-          </ul>
+      </ul>
     </div>
+
+    <div class="col-md-1"></div>
+
+<!--
+    <div class="col bg-light" style="margin-bottom: 50px;" >
+      <br><br><br><br>
+     <div class="row" >
+        <div class="col-md-2" style="padding-left: 50px">
+          <label for="">Picture</label>
+
+        </div>
+        <div class="col-md-4">
+
+          <input type="text">
+
+        </div>
+     </div>
+
+
+ 
+    <br>
+    <br>
+    <button style="margin-left: 400px; margin-bottom: 15px; " type="submit" (click)="addPricePlan(); clean1.value=''; clean2.value=''; clean3.value=''; clean4.value=''; clean5.value=''; clean6.value=''; clean7.value=''; clean8.value=''; clean9.value=''; clean10.value=''; clean11.value=''; clean12.value=''; " class="btn btn-primary">Add</button>
     
-    <div class="col position1" >
-        
-    </div>
-    
+
   </div>
-</div>
+
+
+  <div class="row">
+
+    <img src="https://lh5.googleusercontent.com/nhFallIrO-EbnsZquwoG9_al7b9Ujg-Ihogk0mq0_IPM2wqpKPZUb3F4aoSDXOfTG8PQLR-LLGaB23X9giVY=w1920-h948-rw" alt="accomodation" class="img-item"/>
+
+  </div>
+  -->
