--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -11,7 +11,7 @@
       </li>
 
       <li class="nav-item">
-        <a class="nav-link linkc" [routerLink]="['pictures']">Pictures</a>
+        <a class="nav-link linkc" [routerLink]="['reservations']" >Reservations</a>
       </li>
 
       <li class="nav-item">
