--- a/src/app/components/newaccommodation/newaccommodation.component.html
+++ b/src/app/components/newaccommodation/newaccommodation.component.html
@@ -25,7 +25,7 @@
   </div>
   <div class="form-group ">
     <label class="col-sm-2" for="Name">Category:</label>
-    <input class="col-sm-2" type="text" [(ngModel)]="accommodation.category" name="name" style="font-size: 12px" placeholder="Name" #namee required>
+    <input class="col-sm-2" type="text" [(ngModel)]="accommodation.category" name="category" style="font-size: 12px" placeholder="Category" #namee required>
   </div>
   <br>
   <legend style="margin-left: 12px;">Location:</legend>
