--- a/src/app/components/reservations/reservations.component.html
+++ b/src/app/components/reservations/reservations.component.html
@@ -14,36 +14,36 @@
           <div class="col-md-8">
             <div class="row">
               <div class="col-md-6">
-                  <h6>{{reservation.accommodation.name}}</h6>
+                  <h6>{{reservation?.accommodation?.name}}</h6>
               </div>
             </div>
             
             <div class="row">
               <div class="col-md-6">
-                <label for="">Check in: </label>{{reservation.startDate}}
+                <label for="">Check in: </label>{{reservation?.startDate}}
               </div>
               
             </div>
             <div class="row">
                 <div class="col-md-6">
-                    <label for="">Check out: </label>{{reservation.endDate}}
+                    <label for="">Check out: </label>{{reservation?.endDate}}
                   </div>
             </div>
             <div class="row">
                 <div class="col-md-6">
-                  <label for="">Room type: </label> {{reservation.roomType}}
+                  <label for="">Room type: </label> {{reservation?.roomType}}
                 </div>
                 
             </div>
             <div class="row">
                 <div class="col-md-6">
-                  <label for="">Name: </label> {{reservation.name}}
+                  <label for="">Name: </label> {{reservation?.name}}
                 </div>
                 
             </div>
             <div class="row">
                 <div class="col-md-6">
-                  <label for="">Surname: </label> {{reservation.surname}}
+                  <label for="">Surname: </label> {{reservation?.surname}}
                 </div>
                 
             </div>
